fixes latest blog post overflowing x

--- a/components/Blog/Meta.css
+++ b/components/Blog/Meta.css
@@ -42,6 +42,14 @@
     background-clip: text;
     -webkit-background-clip: text;
     color: transparent;
+
+    @media (--xs-n-below) {
+      font-size: var(--font-size-6);
+    }
+
+    @media (--xxs-n-below) {
+      font-size: var(--font-size-5);
+    }
   }
 
   & > img {
